--- a/http-server/nginx.config
+++ b/http-server/nginx.config
@@ -1,7 +1,10 @@
 server {
-  listen 80;
   listen 443 ssl;
   server_name vladbortnik.dev www.vladbortnik.dev;
+
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
 
   location / {
     root /srv/static;
@@ -18,4 +21,22 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     add_header P3P 'CP="ALL DSP COR PSAa PSDa OUR NOR ONL UNI COM NAV"';
   }
+
+  ssl_certificate /etc/letsencrypt/live/vladbortnik.dev/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/vladbortnik.dev/privkey.pem; # managed by Certbot
+}
+
+server {
+  listen 80;
+
+  if ($host = www.vladbortnik.dev) {
+    return 301 https://$host$request_uri;
+  } # managed by Certbot
+
+  if ($host = vladbortnik.dev) {
+    return 301 https://$host$request_uri;
+  } # managed by Certbot
+
+  server_name vladbortnik.dev www.vladbortnik.dev;
+    return 404; # managed by Certbot
 }
